# digletweb

./: README.md  pyproject.toml
config/: api_router.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
digletweb/core/: permissions.py
digletweb/links/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
digletweb/links/migrations/: 0001_initial.py  0002_alter_link_slug.py  0003_link_num_vote_down_link_num_vote_up_link_vote_score.py  0004_relatedlink.py  0005_alter_relatedlink_domain.py  0006_relatedlink_parent.py  0007_comment.py
digletweb/users/: admin.py  apps.py  models.py  serializers.py  urls.py  validators.py  views.py
digletweb/users/migrations/: 0001_initial.py  0002_user_avatar.py  0003_alter_user_avatar.py  0004_user_background_image.py  0005_user_about_user_facebook_profile_user_fullname_and_more.py  0006_rename_fullname_user_full_name.py
